# smallperm-rs

./: Cargo.toml  LICENSE  README.md
src/: feistel.rs  lib.rs
